--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^5.4.3",
     "turbolinks": "^5.2.0",
-    "webpack": "^4.3.0"
+    "webpack": "^4.3.0",
+    "webpack-cli": "^4.10.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
   }
 }
